Se termino el portafolio

--- a/src/estilos/presentacion.css
+++ b/src/estilos/presentacion.css
@@ -17,7 +17,7 @@
 #presentacion .area-texto p {
   font-size: 20px;
   width: 80%;
-  margin: auto 2% auto auto;
+  margin: 2% 2% 2% auto;
 }
 #presentacion .area-texto .areaRedes{
   width: 80%;
