--- a/src/estilos/experiencia.css
+++ b/src/estilos/experiencia.css
@@ -19,8 +19,8 @@
     height: 100%;
 }
 #experiencia .area-experiencia .area-imagen img{
-    width: 100%;
-    height: 80%;
+    max-width: 100%;
+    max-height: 80%;
     margin: auto;
 }
 
